--- a/app/src/main/res/layout/activity_playlist_detail.xml
+++ b/app/src/main/res/layout/activity_playlist_detail.xml
@@ -16,7 +16,8 @@
         android:id="@+id/foreground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:transitionName="transition_foreground" />
+        android:transitionName="transition_foreground"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
