--- a/app/src/main/res/layout/artist_detail_albums_header.xml
+++ b/app/src/main/res/layout/artist_detail_albums_header.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v7.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:elevation="3dp"
+    app:cardCornerRadius="0dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="150dp"
-    android:paddingBottom="20dp"
+    android:paddingBottom="10dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 <android.support.v7.widget.RecyclerView
@@ -14,7 +24,9 @@
     android:layout_height="150dp"
     android:layout_gravity="top"
     android:layout_marginTop="10dp"
+    android:paddingTop="10dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     />
 
 </FrameLayout>
+</android.support.v7.widget.CardView>
