--- a/app/src/main/res/layout/item_artist_album.xml
+++ b/app/src/main/res/layout/item_artist_album.xml
@@ -13,7 +13,7 @@
         android:layout_width="104dp"
         android:layout_height="match_parent">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/album_art"
             android:layout_width="104dp"
             android:layout_height="104dp"
