--- a/app/src/main/res/layout/item_folder_list.xml
+++ b/app/src/main/res/layout/item_folder_list.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="5dp"
     android:paddingTop="8dp">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/album_art"
         android:layout_width="46dp"
         android:layout_height="46dp"
