--- a/app/src/main/res/layout/item_playing_queue.xml
+++ b/app/src/main/res/layout/item_playing_queue.xml
@@ -24,7 +24,7 @@
             app:materialIconSize="30dp" />
 
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/albumArt"
             android:layout_width="55dp"
             android:layout_height="55dp"
