--- a/app/src/main/res/layout/item_song_playlist.xml
+++ b/app/src/main/res/layout/item_song_playlist.xml
@@ -23,7 +23,7 @@
             app:materialIconColor="@android:color/white"
             app:materialIconSize="30dp" />
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/albumArt"
             android:layout_width="55dp"
             android:layout_height="55dp"
