--- a/app/src/main/res/layout/item_song_timber1.xml
+++ b/app/src/main/res/layout/item_song_timber1.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/albumArt"
             android:layout_width="75dp"
             android:layout_height="70dp"
