--- a/app/src/main/res/layout/layout_about_dialog.xml
+++ b/app/src/main/res/layout/layout_about_dialog.xml
@@ -40,32 +40,34 @@
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:id="@+id/googleplus"
-        android:text="Google+"
+        android:text="This app is using the code from the open source app Timber"
         android:textSize="17sp"
         android:clickable="true"
         style="@style/TextAppearance.AppCompat.Body1"/>
 
-    <TextView
-        android:id="@+id/twitter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:paddingTop="8dp"
-        android:paddingLeft="10dp"
-        android:text="Twitter"
-        android:textSize="17sp"
-        style="@style/TextAppearance.AppCompat.Body1"/>
+    <!--<TextView-->
+        <!--android:id="@+id/twitter"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:clickable="false"-->
+        <!--android:visibility="invisible"-->
+        <!--android:paddingTop="8dp"-->
+        <!--android:paddingLeft="10dp"-->
+        <!--android:text="Twitter"-->
+        <!--android:textSize="17sp"-->
+        <!--style="@style/TextAppearance.AppCompat.Body1"/>-->
 
-    <TextView
-        android:id="@+id/github"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:paddingLeft="10dp"
-        android:paddingTop="8dp"
-        android:text="Github"
-        android:textSize="17sp"
-        style="@style/TextAppearance.AppCompat.Body1"/>
+    <!--<TextView-->
+        <!--android:id="@+id/github"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:clickable="false"-->
+        <!--android:visibility="invisible"-->
+        <!--android:paddingLeft="10dp"-->
+        <!--android:paddingTop="8dp"-->
+        <!--android:text="Github"-->
+        <!--android:textSize="17sp"-->
+        <!--style="@style/TextAppearance.AppCompat.Body1"/>-->
 
     </LinearLayout>
 
@@ -83,7 +85,8 @@
         android:id="@+id/feature_request"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="true"
+        android:clickable="false"
+        android:visibility="invisible"
         android:paddingLeft="15dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="20dp"
