--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,9 +6,9 @@
     <color name="window_background_black">#000000</color>
     <color name="bt_accent">#00B8D4</color>
 
-    <color name="colorPrimary">#673AB7</color>
-    <color name="colorPrimaryDark">#512DA8</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#4a4959</color>
+    <color name="colorPrimaryDark">#525065</color>
+    <color name="colorAccent">#ffb701</color>
 
     <color name="colorPrimaryDarkTheme">#4a4959</color>
     <color name="colorPrimaryDarkDarkTheme">#525065</color>
